@@ -1,4 +1,4 @@
-package com.idark.valoria.network;
+package com.idark.valoria.network.packets;
 
 import com.idark.valoria.Valoria;
 import com.idark.valoria.client.particle.ModParticles;
@@ -10,7 +10,7 @@ import org.joml.Vector3d;
 
 import java.util.function.Supplier;
 
-public class ManipulatorParticlePacket {
+public class ManipulatorCraftParticlePacket {
 
     private final float posX;
     private final float posY;
@@ -18,11 +18,10 @@ public class ManipulatorParticlePacket {
     private final float posToX;
     private final float posToY;
     private final float posToZ;
-    private final float yawRaw;
 
     private final float colorR, colorG, colorB;
 
-    public ManipulatorParticlePacket(float posX, float posY, float posZ, float yawRaw, float posToX, float posToY, float posToZ, float colorR, float colorG, float colorB) {
+    public ManipulatorCraftParticlePacket(float posX, float posY, float posZ, float posToX, float posToY, float posToZ, float colorR, float colorG, float colorB) {
         this.posX = posX;
         this.posY = posY;
         this.posZ = posZ;
@@ -30,38 +29,28 @@ public class ManipulatorParticlePacket {
         this.posToX = posToX;
         this.posToY = posToY;
         this.posToZ = posToZ;
-        this.yawRaw = yawRaw;
 
         this.colorR = colorR;
         this.colorG = colorG;
         this.colorB = colorB;
     }
 
-    public static ManipulatorParticlePacket decode(FriendlyByteBuf buf) {
-        return new ManipulatorParticlePacket(buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat());
+    public static ManipulatorCraftParticlePacket decode(FriendlyByteBuf buf) {
+        return new ManipulatorCraftParticlePacket(buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat(), buf.readFloat());
     }
 
-    public static void handle(ManipulatorParticlePacket msg, Supplier<NetworkEvent.Context> ctx) {
+    public static void handle(ManipulatorCraftParticlePacket msg, Supplier<NetworkEvent.Context> ctx) {
         if (ctx.get().getDirection().getReceptionSide().isClient()) {
             ctx.get().enqueueWork(() -> {
                 Level world = Valoria.proxy.getWorld();
-                double pitch = ((90) * Math.PI) / 180;
-                double yaw = ((msg.yawRaw + 90) * Math.PI) / 180;
-
-                float pRadius = 0.25f;
-                double locYaw = 0;
-                double locPitch = 0;
-                double X = Math.sin(locPitch + pitch) * Math.cos(locYaw + yaw) * pRadius * 0.75F;
-                double Y = Math.cos(locPitch + pitch) * pRadius * 0.75F;
-                double Z = Math.sin(locPitch + pitch) * Math.sin(locYaw + yaw) * pRadius * 0.75F;
                 Vector3d d = new Vector3d(msg.posX - msg.posToX, msg.posY - msg.posToY, msg.posZ - msg.posToZ);
                 Particles.create(ModParticles.SPHERE)
                         .addVelocity(d.x, d.y, d.z)
-                        .setAlpha(0.52f, 0)
-                        .setScale(0.1f, 0)
+                        .setAlpha(0.30f, 1)
+                        .setScale(0.08f, 0)
                         .setColor(msg.colorR / 255, msg.colorG / 255, msg.colorB / 255, 0, 0, 0)
-                        .setLifetime(6)
-                        .spawn(world, msg.posX + X, msg.posY + Y + ((Math.random() - 0.5D) * 0.2F), msg.posZ + Z);
+                        .setLifetime(2)
+                        .spawn(world, msg.posX, msg.posY, msg.posZ);
 
                 ctx.get().setPacketHandled(true);
             });
@@ -72,7 +61,6 @@ public class ManipulatorParticlePacket {
         buf.writeFloat(posX);
         buf.writeFloat(posY);
         buf.writeFloat(posZ);
-        buf.writeFloat(yawRaw);
 
         buf.writeFloat(posToX);
         buf.writeFloat(posToY);
