@@ -3,8 +3,8 @@ package com.idark.valoria.registries.command;
 import com.idark.valoria.api.unlockable.Unlockable;
 import com.idark.valoria.capability.IUnlockable;
 import com.idark.valoria.network.PacketHandler;
-import com.idark.valoria.network.PageToastPacket;
-import com.idark.valoria.network.UnlockableUpdatePacket;
+import com.idark.valoria.network.packets.PageToastPacket;
+import com.idark.valoria.network.packets.UnlockableUpdatePacket;
 import com.idark.valoria.registries.command.main.CommandArgument;
 import com.idark.valoria.registries.command.main.CommandBuilder;
 import com.idark.valoria.registries.command.main.CommandPart;
