@@ -2,8 +2,8 @@ package com.idark.valoria.registries.world.block.types;
 
 import com.idark.valoria.client.gui.menu.ManipulatorMenu;
 import com.idark.valoria.client.render.model.blockentity.TickableBlockEntity;
-import com.idark.valoria.network.ManipulatorParticlePacket;
 import com.idark.valoria.network.PacketHandler;
+import com.idark.valoria.network.packets.ManipulatorParticlePacket;
 import com.idark.valoria.registries.world.block.entity.ManipulatorBlockEntity;
 import com.idark.valoria.registries.world.item.ModItems;
 import com.idark.valoria.util.PacketUtils;
