@@ -2,5 +2,24 @@
   "parent": "valoria:item/spear",
   "textures": {
     "layer0": "valoria:item/bloodhound"
+  },
+  "display": {
+    "gui": {
+      "rotation": [
+        0,
+        0,
+        0
+      ],
+      "translation": [
+        -1,
+        0,
+        0
+      ],
+      "scale": [
+        1,
+        1,
+        1
+      ]
+    }
   }
 }
